<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="27dp" />

        <Button
            android:id="@+id/activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_service"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="91dp" />

        <Button
            android:id="@+id/deactivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deactivate_service"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="153dp" />

        <Button
            android:id="@+id/kill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kill_service"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="153dp" />

        <Button
            android:id="@+id/force_kill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_kill_service"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="153dp" />

        <Button
            android:id="@+id/update_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_settings"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="153dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>